@@ -86,7 +86,7 @@ test.run(arguments = 'aaa.out')
 test.fail_test(test.read('aaa.out') != "aaa.in\n")
 
 test.run(arguments = bad_drive + 'not_mentioned',
-         stderr = "scons: *** Do not know how to make target `%snot_mentioned'.  Stop.\n" % bad_drive,
+         stderr = "scons: *** No drive `%s' for target `%snot_mentioned'.  Stop.\n" % (bad_drive, bad_drive),
          status = 2)
 
 test.run(arguments = bad_drive + 'no_target_1',
